# node-libsamplerate

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  example.js  index.js  package-lock.json  package.json  waveheader.js
src/: binding.cc  node-libsamplerate.cc  node-libsamplerate.h
test/: downconvert.test.js  event.test.js  misc.test.js  resampleType.test.js  testHelpers.js  tests.js  upconvert.test.js  upsample.test.js
